fix: add JVM exports by default